--- a/hack/my.cnf
+++ b/hack/my.cnf
@@ -3,6 +3,9 @@ character-set-server=utf8mb4
 collation-server=utf8mb4_general_ci
 default-time-zone=+08:00
 
+general_log = 1
+general_log_file = /var/log/my.log
+
 [client]
 default-character-set=utf8mb4
 
